--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
 <html lang="fa">
-<head>
-  <meta charset="UTF-8" />
-  <title>ورود</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+<head><meta charset="UTF-8"><title>ورود</title></head>
 <body>
-  <div class="login-box">
-    <h2>صفحه ورود</h2>
-    <form id="loginForm" method="POST" action="/login">
-      <input type="text" name="username" placeholder="نام کاربری" required />
-      <input type="password" name="password" placeholder="رمز عبور" required />
-      <input type="hidden" name="_csrf" id="csrf" />
-      <button type="submit">ورود</button>
-    </form>
-  </div>
+  <form id="loginForm" method="POST" action="/login">
+    <input type="text" name="username" placeholder="نام کاربری" required>
+    <input type="password" name="password" placeholder="رمز عبور" required>
+    <input type="hidden" name="_csrf" id="csrf">
+    <button type="submit">ورود</button>
+  </form>
   <script>
-    // دریافت CSRF توکن و تزریق به فرم
     fetch("/csrf-token", { credentials: "same-origin" })
       .then(r => r.json())
       .then(d => { document.getElementById("csrf").value = d.csrfToken; });
